--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,25 +1,25 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 :root {
-    --background: #ffffff;
-    --foreground: #171717;
+  --background: #ffffff;
+  --foreground: #171717;
+  --text: #374151;
+  --text-secondary: #6b7280;
+  --text-title: #1f2937;
+  --gray-secondary: #f3f4f6;
 }
 
 @theme inline {
-    --color-background: var(--background);
-    --color-foreground: var(--foreground);
-    --font-dm-sans: var(--font-dm-sans);
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background: #0a0a0a;
-        --foreground: #ededed;
-    }
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --font-dm-sans: var(--font-dm-sans);
+  --color-text: var(--text);
+  --color-text-secondary: var(--text-secondary);
+  --color-text-title: var(--text-title);
+  --color-gray-secondary: var(--gray-secondary);
 }
 
 body {
-    background: var(--background);
-    color: var(--foreground);
-    font-family: Arial, Helvetica, sans-serif;
+  background: var(--background);
+  color: var(--foreground);
 }
